# create_raster

./: CMakeLists.txt  README.md
doc/: Doxyfile
src/: Box.cpp  Box.h  Pixel.cpp  Pixel.h  Rendu_Guerledan.PGM  Rendu_Guerledan.PPM  main.cpp
