cmake_minimum_required(VERSION 2.6) # compatibilités de CMake
project(create_raster) # nom du projet : "main"
set(CMAKE_BUILD_TYPE debug) # compilation en mode debug
set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++11") # options
file( # liste des fichiers à compiler
	GLOB_RECURSE # recherche récursive
	source_files # fichiers listés dans une variable source_files
	src/*.cpp # forme des fichiers à rechercher
)
add_executable( # création de l’exécutable binaire du projet
	create_raster # nom du binaire
	${source_files} # liste des fichiers compilés pour le linking
)

find_package(PROJ)
target_link_libraries(create_raster ${PROJ_LIBRARIES})
include_directories(${PROJ_INCLUDE_DIRS})
